<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".pharmacy_module.doctor.CreateAndUpdateDoctorProfile">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootLayout">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar_without_round" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:paddingBottom="@dimen/_20sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="#ECECEC"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edittext_blue2"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/enter_medicine_name"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/quantityEt"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/bg_edittext_blue2"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_vertical"
                        android:hint="@string/quantity"
                        android:inputType="number"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textSize="@dimen/_12sdp" />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/priceEt"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/bg_edittext_blue2"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center_vertical"
                        android:inputType="numberDecimal"
                        android:hint="@string/enter_price"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textSize="@dimen/_12sdp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp">
                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_15sdp"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center_vertical"
                        android:text="@string/expire_date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/fromDate"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:hint="2025 Oct 30"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_13sdp"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/black"/>
                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/calender1"
                        android:layout_width="0dp"
                        android:layout_weight="0.5"

                        android:src="@drawable/calender_icon"
                        android:layout_height="@dimen/_20sdp"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/descriptionEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edittext_blue2"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="top"
                    android:minLines="5"
                    android:text="@string/enter_description"
                    android:padding="@dimen/_20sdp"
                    android:textSize="@dimen/_12sdp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/precautionsEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_edittext_blue2"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="top"
                    android:minLines="5"
                    android:text="@string/enter_precautions"
                    android:padding="@dimen/_20sdp"
                    android:textSize="@dimen/_12sdp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/licenceImageCL"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginHorizontal="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/bg_dash">

                    <LinearLayout
                        android:id="@+id/linearLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:padding="@dimen/_5sdp"
                            android:src="@drawable/ic_paperclip_chat"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:fontFamily="@font/roboto_regular"
                            android:text="@string/medicine_image"
                            android:textColor="#9F9F9F"
                            android:textSize="@dimen/sp_14"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:fontFamily="@font/roboto_regular"
                            android:paddingHorizontal="@dimen/_15sdp"
                            android:text="Add Picture of medicine"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textSize="@dimen/sp_11"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView9" />


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/licenceImg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/createBtn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/bg_blue_round_button"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:backgroundTint="@color/color_050D4C"
                    android:text="@string/add_medicine"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginHorizontal="@dimen/_15sdp"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
