<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/recyclerview_margin"
        android:layout_marginStart="@dimen/recyclerview_margin"
        android:layout_marginTop="@dimen/recyclerview_margin"
        android:text="@string/select_entry"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16" />

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/searchview_margin"
        android:layout_marginTop="@dimen/searchview_margin"
        android:iconifiedByDefault="true"
        android:queryHint="Search..." />

    <LinearLayout
        android:id="@+id/select_all_container"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/select_all_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/color_050D4C"
            android:clickable="false" />

        <TextView
            android:textAllCaps="true"
            android:id="@+id/select_all_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/textview_margin"
            android:layout_marginStart="@dimen/textview_margin"
            android:textSize="@dimen/font_size_subheading"
            android:text="@string/select_all"/>
    </LinearLayout>


    <View
        android:layout_marginTop="@dimen/recyclerview_margin"
        android:layout_marginBottom="@dimen/searchview_margin"
        android:layout_marginStart="@dimen/line_margin"
        android:layout_marginEnd="@dimen/line_margin"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:visibility="gone"
        android:background="@color/color_050D4C"/>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <view
            android:id="@+id/recycler_view"
            class="com.app.ecolive.utils.RecyclerViewEmptySupport"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/list_empty1"
            android:paddingVertical="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/list_empty"
            android:textSize="@dimen/font_size_normal" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:fontFamily="@font/roboto_bold"
            android:text="Cancel"
            android:textColor="@color/color_898A8D"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:layout_weight="0.2"
            android:gravity="end"
            android:text="Done"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>
</LinearLayout>